Changes for 2.5.0

New features:
A.F.I..PS. [ZBXNEXT-1219] added application prototype support to low level discovery rules (wiper, Ivo)
........S. [ZBX-4344] added functionality to stop processing escalations if dependent trigger fires (dimir)
ADF.I..PS. [ZBXNEXT-679] implement SMTP authentication support (asaveljevs, Oleg)
..FGI..... [ZBXNEXT-1368] added Windows service discovery and service.info[] item; thanks to Ryan Armstrong for patch (asaveljevs, igors)
..F....... [ZBX-8297] removed "Triggers info" top line from Monitoring > Triggers page fullscreen view (Ivo)
A.FGI..PS. [ZBXNEXT-786] renamed net.tcp.service[ntp] and net.tcp.service.perf[ntp] to net.udp.service[ntp] and net.udp.service.perf[ntp] (asaveljevs, Oleg, Sasha)
A.F.....S. [ZBXNEXT-1229] added support of trigger prototype dependencies (Ivo, Sasha)
..F....... [ZBXNEXT-210] added displaying of the available user macros on host and template level (Sasha)
A.F....... [ZBX-7654] implemented XML import versioning and fixed various XML validation issues (Oleg, Pavels, Sasha)
..F.I..PS. [ZBXNEXT-2800] increased error field lengths in "hosts" table from 128 to 2048 (asaveljevs)
....I..... [ZBXNEXT-2495] improved performance of maps; changed triggers_2 index (Sasha)
........S. [ZBXNEXT-2474] improved value cache low memory mode handling by switching back to normal mode once per day. The current value cache operational mode now can be checked with zabbix[vcache,cache,mode] interval item (wiper)
........S. [ZBXNEXT-2462] improved nodata() function calculation (wiper)
A.F....PS. [ZBX-5813] added support for spaces in IP ranges in network discovery and action conditions (asaveljevs)
.......PS. [ZBXNEXT-866] added IP address in the messages about connections between server and proxy (igors)
A......... [ZBXNEXT-2724] removed all deprecated "exists" and "getObjects" API methods, "expandData" parameter in various *.get methods and "selectHosts" parameter from application.get method (Ivo)